kubernetes/keycloak/keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: keycloak
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        tier: frontend
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.1
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
