kubernetes/keycloak/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak-mysql
  labels:
    app: keycloak
spec:
  ports:
    - port: 3306
  selector:
    app: keycloak
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak-mysql
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-server-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        - name: mysql-server-initdb
          configMap:
            name: mysql-server-initdb-config
