kubernetes/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - keycloak.shukawam.com
      secretName: code-at-customer-tls
  rules:
    - host: keycloak.shukawam.com
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /
            pathType: Prefix
